WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286002
REGRESSION (
286055@main
): Relative-positioned input elements in scroll areas don't render outlines
https://bugs.webkit.org/show_bug.cgi?id=286002
Summary
REGRESSION (286055@main): Relative-positioned input elements in scroll areas ...
Georges Basile Stavracas Neto
Reported
2025-01-15 08:43:28 PST
Created
attachment 473907
[details]
Reproducer This seems to be a regression introduced by
https://commits.webkit.org/286055@main
for fixing
https://bugs.webkit.org/show_bug.cgi?id=282478
See the attachment for a reproducer. Specifically, commit
https://commits.webkit.org/286055@main
introduces the following line: ``` if (localPaintFlags.contains(PaintLayerFlag::PaintingOverflowContents)) return false; ``` and this is preventing the outline from the input field from rendering.
Attachments
Reproducer
(2.00 KB, text/html)
2025-01-15 08:43 PST
,
Georges Basile Stavracas Neto
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-15 13:30:45 PST
<
rdar://problem/142995142
>
Georges Basile Stavracas Neto
Comment 2
2025-01-16 06:43:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39130
Simon Fraser (smfr)
Comment 3
2025-01-17 16:02:16 PST
Seems to happen when the <input> itself is `position:relative` (but a relative container is OK).
Simon Fraser (smfr)
Comment 4
2025-01-17 16:30:04 PST
The issue here is that we want to avoid painting the outline *for the scroller itself* in the scrolled contents layer (hence the `return false` for PaintingOverflowContents), but we do need to paint the outline in any descendant layers.
Simon Fraser (smfr)
Comment 5
2025-01-17 18:11:33 PST
I have an alternative fix.
Simon Fraser (smfr)
Comment 6
2025-01-17 18:17:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39229
EWS
Comment 7
2025-01-20 09:41:49 PST
Committed
289154@main
(d183e4fe4bcd): <
https://commits.webkit.org/289154@main
> Reviewed commits have been landed. Closing PR #39229 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug