Input elements in scroll areas don't render outlines when focused anymore https://bugs.webkit.org/show_bug.cgi?id=286002

Reviewed by NOBODY (OOPS!).

WIP.

Add a new phase to GraphicsLayerPaintingPhase to render outlines, and
use that in RenderLayer to determine if outlines should be rendered.

* Source/WebCore/platform/graphics/GraphicsLayer.cpp:
(WebCore::operator<<):
* Source/WebCore/platform/graphics/GraphicsLayerClient.h:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents):
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayer.h:
* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::createPrimaryGraphicsLayer):
(WebCore::RenderLayerBacking::updatePaintingPhases):
(WebCore::RenderLayerBacking::paintIntoLayer):
(WebCore::RenderLayerBacking::paintFlagsForLayer const):